--- a/applied_data_science_capstone/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
+++ b/applied_data_science_capstone/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = requests.get('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M').text\n",
+    "url = requests.get('').text\n",
     "soup = BeautifulSoup(url, 'lxml')"
    ]
   },
@@ -861,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
