--- a/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2).ipynb
+++ b/Capstone_Project_The_Battle_of_Neighborhoods_(Week_2).ipynb
@@ -283,15 +283,28 @@
       "metadata": {
         "id": "4NMq7glWyi4r",
         "colab_type": "code",
-        "colab": {},
-        "cellView": "both"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "cellView": "form",
+        "outputId": "a31a64f0-91e0-45e7-b830-2ee21a22e549"
       },
       "source": [
-        "#@title Default title text\n",
-        "import numpy"
+        "#@title test\n",
+        "import numpy\n",
+        "print('123')"
       ],
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "123\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
