--- a/applied_data_science_capstone/Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
+++ b/applied_data_science_capstone/Capstone Project - The Battle of Neighborhoods (Week 1).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Food Hunt in downtown Toronto"
+    "# Food Hunt in downtown Toronto (Part 1)"
    ]
   },
   {
