--- a/applied_data_science_capstone/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
+++ b/applied_data_science_capstone/Segmenting_and_Clustering_Neighborhoods_in_Toronto.ipynb
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = requests.get('').text\n",
+    "url = requests.get('https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M').text\n",
     "soup = BeautifulSoup(url, 'lxml')"
    ]
   },
@@ -48,25 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<!DOCTYPE html>\n",
-      "<html class=\"client-nojs\" dir=\"ltr\" lang=\"en\">\n",
-      " <head>\n",
-      "  <meta charset=\"utf-8\"/>\n",
-      "  <title>\n",
-      "   List of postal codes of Canada: M - Wikipedia\n",
-      "  </title>\n",
-      "  <script>\n",
-      "   document.documentElement.className=\"client-js\";RLCONF={\"wgBreakFrames\":!1,\"wgSeparatorTransformTable\":[\"\",\"\"],\"wgDigitTransformTable\":[\"\",\"\"],\"wgDefaultDateFormat\":\"dmy\",\"wgMonthNames\":[\"\",\"January\",\"February\",\"March\",\"April\",\"May\",\"June\",\"July\",\"August\",\"September\",\"October\",\"November\",\"December\"],\"wgRequestId\":\"XoufggpAMM8AAvvJOwcAAABL\",\"wgCSPNonce\":!1,\"wgCanonicalNamespace\":\"\",\"wgCanonicalSpecialPageName\":!1,\"wgNamespaceNumber\":0,\"wgPageName\":\"List_of_postal_codes_of_Canada:_M\",\"wgTitle\":\"List of postal codes of Canada: M\",\"wgCurRevisionId\":949497198,\"wgRevisionId\":949497198,\"wgArticleId\":539066,\"wgIsArticle\":!0,\"wgIsRedirect\":!1,\"wgAction\":\"view\",\"wgUserName\":null,\"wgUserGroups\":[\"*\"],\"wgCategories\":[\"Articles with short description\",\"Communications in Ontario\",\"Postal codes in Canada\",\"Toronto\",\"Ontario\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(soup.prettify()[:1000])"
    ]
